--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" href="css/style.css">
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +9,14 @@
 <body>
     <header>
         <h1>Welcome to My Web Project</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="topic1.html">Topic 1</a></li>
+                <li><a href="topic2.html">Topic 2</a></li>
+                <li><a href="references.html">References</a></li>
+            </ul>
+        </nav>
     </header>
     <p>This is a simple website hosted on GitHub Pages.</p>
 </body>
