--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <li><a href="topic1.html">Topic 1</a></li>
                 <li><a href="topic2.html">Topic 2</a></li>
                 <li><a href="references.html">References</a></li>
-            </ul>
+   <li><a href="quiz.html">Quiz</a></li>
+  </ul>
         </nav>
     </header>
     <p>This is a simple website hosted on GitHub Pages.</p>
