--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>IT Quiz</title>
-  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
+<script src="js/script.js"></script>
 </head>
 <body>
   <div class="quiz-container">
