--- a/quiz.html
+++ b/quiz.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>IT Quiz</title>
-<link rel="stylesheet" href="css/style.css">
-<script src="js/script.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="quiz-container">
